mule-user-guide/v/3.7/using-maven-with-mule.adoc
= 在Mule中使用Maven
:keywords: studio, maven, version control, dependencies, libraries

http://maven.apache.org/[Maven的]是一个项目管理实用程序，您可以使用它开发Mule中的项目。 Mule提供了内置的Maven功能，包括下面列出的功能。

*In Anypoint Studio:*

*  link:/anypoint-studio/v/5/building-a-mule-application-with-maven-in-studio[在Studio中使用Maven构建一个Mule应用程序]
*  link:/mule-user-guide/v/3.7/enabling-maven-support-for-a-studio-project[为现有的Studio项目启用Maven支持]
*  link:/anypoint-studio/v/5/importing-a-maven-project-into-studio[将Maven项目导入Studio]

*In Mule:*

Maven-Mule功能由Maven的两个Mule插件提供。

*  link:/mule-user-guide/v/3.7/maven-tools-for-mule-esb[Male的Maven工具]是一个插件，提供了构建常规Mule应用程序的原型，允许您从Maven开发Mule应用程序
*  link:/mule-user-guide/v/3.7/mule-maven-plugin[骡Maven插件]允许您在Maven环境中控制Mule实例

本页概述了使用Maven管理Mule项目的好处和选项。

Mule-Maven文档页面的完整列表：


*  link:/mule-user-guide/v/3.7/using-maven-in-mule-esb[在Mule ESB中使用Maven]
**  link:/mule-user-guide/v/3.7/configuring-maven-to-work-with-mule-esb[配置Maven以使用Mule]
**  link:/mule-user-guide/v/3.7/maven-tools-for-mule-esb[Male的Maven工具]
**  link:/mule-user-guide/v/3.7/mule-maven-plugin[骡Maven插件]
*  link:/mule-user-guide/v/3.7/maven-reference[Maven参考]

[TIP]
有关如何在Anypoint Sutio（MuleSoft用于开发集成应用程序的IDE）上下文中使用Maven的信息，请参阅 link:/anypoint-studio/v/5/using-maven-in-anypoint-studio[在Anypoint Studio中使用Maven]


== 先决条件

本文档假定您熟悉Maven，管理pom.xml文件以及使用Maven插件。如果您刚开始使用Maven，我们建议您关注 link:http://maven.apache.org/guides/getting-started/[Maven的入门教程]。

*Note:* https://www.anypoint.mulesoft.com/exchange/?type=connector[Anypoint Exchange]提供了Maven依赖关系信息。
单击连接器资源并单击Dependency Snippets列出Maven pom.xml文件依赖项。

== 优点

虽然强烈建议，像Maven这样的项目经理并不是严格需要在Mule中开发应用程序。您可以在不启用Maven支持的情况下使用Anypoint Studio构建，管理和部署Mule应用程序，也可以通过手动创建文件夹结构并将所需库导入打包应用程序，在没有Maven的情况下在Studio外部构建Mule应用程序。但是，Maven可以帮助管理Anypoint Studio内外的Mule应用程序，从而提供以下好处：

* 当您使用MuleSoft的mule-project-archetype创建新的Mule项目或在Studio中创建启用Maven的项目时，您可以确信您正在使用正确的Mule项目文件夹结构和基本的标准依赖项集。
* 如果您在Studio中使用Maven，则每次向流中添加需要附加依赖关系的新元素时，Studio都会自动管理您的POM文件。
*  Maven POM文件使共享项目变得更轻松，更轻量，因为POM引用了依赖关系，因此您不必在项目本身中手动查找并包含每个依赖项。
* 如果您在团队中工作，则每个团队成员可能有不同的Studio配置或引用不同的依赖项版本。使用Maven管理构建可确保最终构建的结果得到消毒和标准化。
* 使用Maven，您可以使用外部框架（如竹子）对自动构建进行编程以实现持续集成。

== 与Mule一起使用Maven的选项

根据您在项目中的位置以及您的目标，您可以：

*  **Build and run a new Maven project in Anypoint Studio.**如果您从头开始，并且想要使用Maven构建项目，请先在Studio中创建一个基于Maven的新项目。然后，您可以从命令行使用Maven运行项目，或者直接从Studio运行它。请参阅 link:/anypoint-studio/v/5/building-a-mule-application-with-maven-in-studio[在Studio中使用Maven构建一个Mule应用程序]，获取分步指南，演示如何使用Maven创建，管理和运行Mule项目。

*  *Create and run a new Maven in Mule.*如果您想使用Maven为Mule创建项目（Studio外部），请使用*Maven Tools for Mule*。这是一个Mule插件，通过使用几个简单的参数运行Maven，可以非常容易地创建一个Mule应用程序。您需要为要在项目中使用的任何 link:/mule-user-guide/v/3.7/anypoint-connectors[Anypoint连接器]添加依赖关系，如果您是企业客户，请将`settings.xml`文件配置为指向MuleSoft Enterprise存储库。要启用访问权限，请点击*Help*> *Install New Software*，然后在*Work with*中点击*Anypoint Addons Update Site*> *Maven Tools for Mule*。点击*Next*并按照安装提示进行操作：+

+
image:MavenToolsForMule.png[MavenToolsForMule] +
+

*  **Import an existing Maven project into Studio.**如果您已经有了需要使用Studio进一步开发的Maven项目，请使用Studio中的内置功能使用`studio:studio`目标导入pom.xml文件。有关详细信息，请访问 link:/anypoint-studio/v/5/importing-a-maven-project-into-studio[将Maven项目导入Studio]。 +

*  **Mavenize an existing Studio project.**如果您在Studio中构建了项目并希望将其转换为Maven项目，则可以使用Studio中的内置支持来"Mavenize"该项目。有关详细信息，请访问 link:/mule-user-guide/v/3.7/enabling-maven-support-for-a-studio-project[为Studio项目启用Maven支持]。

== 提示

*  **Use Studio:** Studio内置的Maven支持最大限度地减少了在添加或修改应用程序时手动更新POM文件的可能性。 +

*  **Update your POM file and settings.xml if necessary:**如果您使用原型从命令行创建Maven项目，则需要手动管理您的POM文件，并且在某些情况下，请将`settings.xml`文件调整为指向MuleSoft Enterprise存储库和供应凭证。在某些情况下，即使您使用Studio管理项目，也可能需要手动调整POM。请参阅 link:/mule-user-guide/v/3.7/configuring-maven-to-work-with-mule-esb[配置说明]了解更多信息。 +

*  *SNAPSHOT version:*使用SNAPSHOT识别您的项目版本，因为您正致力于生产您打算发布的稳定产品。例如，您可以构建项目的1.0.0-SNAPSHOT版本，测试功能，进行更改等，直到您准备将其发布为版本1.0.0。然后，您可以使用新版本1.1.0-SNAPSHOT进行构建。

+
image:snapshot.png[快照]

== 另请参阅

* 详细了解 link:/anypoint-studio/v/5/maven-support-in-anypoint-studio[调整您的Studio偏好设置以使用Maven]。
* 详细了解 link:/anypoint-studio/v/5/importing-a-maven-project-into-studio[将Maven项目导入Studio]或 link:/mule-user-guide/v/3.7/enabling-maven-support-for-a-studio-project[“实现”现有的Studio项目]。
* 在Studio外使用Maven？请参阅这些说明 link:/mule-user-guide/v/3.7/configuring-maven-to-work-with-mule-esb[配置你的Maven安装]指向必要的存储库。
* 访问 link:/mule-user-guide/v/3.7/maven-reference[Maven参考文档]。
